@@ -21,20 +21,20 @@
 import org.cadixdev.gradle.licenser.header.HeaderStyle
 import org.cadixdev.gradle.licenser.tasks.LicenseUpdate
 import org.gradle.internal.jvm.Jvm
-import org.gradle.internal.os.OperatingSystem
 import org.jetbrains.gradle.ext.settings
 import org.jetbrains.gradle.ext.taskTriggers
+import org.jetbrains.intellij.tasks.PrepareSandboxTask
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 import org.jlleitschuh.gradle.ktlint.tasks.BaseKtLintCheckTask
 import org.jlleitschuh.gradle.ktlint.tasks.KtLintFormatTask
 
 plugins {
-    kotlin("jvm") version "1.9.0"
+    kotlin("jvm") version "1.9.20"
     java
     mcdev
     groovy
     idea
-    id("org.jetbrains.intellij") version "1.15.0"
+    id("org.jetbrains.intellij") version "1.16.0"
     id("org.cadixdev.licenser")
     id("org.jlleitschuh.gradle.ktlint") version "10.3.0"
 }
@@ -70,6 +70,12 @@ val gradleToolingExtensionSourceSet: SourceSet = sourceSets.create("gradle-tooli
 val gradleToolingExtensionJar = tasks.register<Jar>(gradleToolingExtensionSourceSet.jarTaskName) {
     from(gradleToolingExtensionSourceSet.output)
     archiveClassifier.set("gradle-tooling-extension")
+}
+
+val externalAnnotationsJar = tasks.register<Jar>("externalAnnotationsJar") {
+    from("externalAnnotations")
+    destinationDirectory.set(layout.buildDirectory.dir("externalAnnotations"))
+    archiveFileName.set("externalAnnotations.jar")
 }
 
 repositories {
@@ -255,7 +261,11 @@ tasks.test {
         }
     }
     systemProperty("NO_FS_ROOTS_ACCESS_CHECK", "true")
-    jvmArgs("--illegal-access=deny")
+
+    jvmArgs(
+        "-Dsun.io.useCanonCaches=false",
+        "-Dsun.io.useCanonPrefixCache=false",
+    )
 }
 
 idea {
@@ -297,6 +307,9 @@ license {
         }
         register("grammars") {
             files.from(project.fileTree("src/main/grammars"))
+        }
+        register("externalAnnotations") {
+            files.from(project.fileTree("externalAnnotations"))
         }
     }
 }
@@ -356,6 +369,12 @@ tasks.register("cleanSandbox", Delete::class) {
     delete(layout.projectDirectory.dir(".sandbox"))
 }
 
+tasks.withType<PrepareSandboxTask> {
+    from(externalAnnotationsJar) {
+        into("Minecraft Development/lib/resources")
+    }
+}
+
 tasks.runIde {
     maxHeapSize = "4G"
 
@@ -371,22 +390,4 @@ tasks.runIde {
 tasks.buildSearchableOptions {
     // not working atm
     enabled = false
-    // https://youtrack.jetbrains.com/issue/IDEA-210683
-    jvmArgs(
-        "--illegal-access=deny",
-        "--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang=ALL-UNNAMED",
-        "--add-opens=java.base/java.util=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.awt.event=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.awt=ALL-UNNAMED",
-        "--add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED",
-        "--add-opens=java.desktop/javax.swing=ALL-UNNAMED",
-        "--add-opens=java.desktop/sun.awt=ALL-UNNAMED",
-        "--add-opens=java.desktop/sun.font=ALL-UNNAMED",
-        "--add-opens=java.desktop/sun.swing=ALL-UNNAMED",
-    )
-
-    if (OperatingSystem.current().isMacOsX) {
-        jvmArgs("--add-opens=java.desktop/com.apple.eawt.event=ALL-UNNAMED")
-    }
 }
